--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
       <label for="size">Size in cm</label>
       <input type="number" id="size" name="size" step="0.1" value="<%= size %>">
       <input type="submit" value="Refresh">
+      <a href="./wall" target="_blank">Wall</a>
     </form>
     <div>
     <%
